--- a/TP04/Ex2/resposiveMenu.css
+++ b/TP04/Ex2/resposiveMenu.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  width: 100vw;
+  height: 100vh;
+}
 body .container {
   width: 100%;
   height: 100%;
@@ -40,7 +44,7 @@ body .container .main-menu .list-menu {
   background-color: antiquewhite;
 }
 body .container .main-menu .list-menu div {
-  padding: 5px 10px;
+  padding: 1%;
   border: 2px solid orange;
 }
 body .container .show-menu {
@@ -49,23 +53,31 @@ body .container .show-menu {
 }
 body .container .show-menu .first-menu, body .container .show-menu .second-menu, body .container .show-menu .third-menu {
   width: 100%;
-  height: 30%;
+  height: 33%;
   background-color: gray;
   display: flex;
 }
-body .container .show-menu .first-menu div, body .container .show-menu .second-menu div, body .container .show-menu .third-menu div {
+body .container .show-menu .first-menu .image, body .container .show-menu .second-menu .image, body .container .show-menu .third-menu .image {
   width: 50%;
   height: 100%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-body .container .show-menu .first-menu div img, body .container .show-menu .second-menu div img, body .container .show-menu .third-menu div img {
+body .container .show-menu .first-menu .image img, body .container .show-menu .second-menu .image img, body .container .show-menu .third-menu .image img {
   width: 50%;
-  height: 100%;
+  height: 80%;
+  border: 2px solid orange;
+}
+body .container .show-menu .first-menu .decription, body .container .show-menu .second-menu .decription, body .container .show-menu .third-menu .decription {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 @media only screen and (max-width: 1000px) {
   .show-menu .first-menu, .show-menu .second-menu, .show-menu .third-menu {
     flex-direction: column;
-    align-items: center;
   }
 }/*# sourceMappingURL=resposiveMenu.css.map */
