--- a/TP04/Ex2/resposiveMenu.scss
+++ b/TP04/Ex2/resposiveMenu.scss
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 body{
-    // width: 100vw;
-    // height: 100vh;
+    width: 100vw;
+    height: 100vh;
     .container{
         width: 100%;
         height: 100%;
@@ -40,7 +40,7 @@ body{
                 align-items: center;
                 background-color: antiquewhite;
                 div{
-                    padding: 5px 10px;
+                    padding: 1%;
                     border: 2px solid orange;
                 }
             }
@@ -50,17 +50,27 @@ body{
             height: 80%;
             .first-menu, .second-menu, .third-menu{
                 width: 100%;
-                height: 30%;
+                height: 33%;
                 background-color: gray;
                 display: flex;
-                div{
+                .image{
                     width: 50%;
                     height: 100%;
-                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    // text-align: center;
                     img{
                         width: 50%;
-                        height: 100%;
+                        height: 80%;
+                        border: 2px solid orange;
                     }
+                }
+                .decription{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: flex-start;
                 }
             }
             
@@ -71,7 +81,7 @@ body{
     .show-menu{
         .first-menu, .second-menu, .third-menu{
             flex-direction: column;
-            align-items: center;
+            // align-items: center;
         }
     }
 }
