--- a/TP04/Ex2/resposiveMenu.scss
+++ b/TP04/Ex2/resposiveMenu.scss
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 body{
-    width: 100vw;
-    height: 100vh;
+    width: 100rem;
+    height: 100rem;
     .container{
         width: 100%;
         height: 100%;
