--- a/TP04/Ex3/counter.css
+++ b/TP04/Ex3/counter.css
@@ -1,21 +1,23 @@
 body {
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 body .container {
-  width: 50vw;
-  height: 80vh;
+  width: 50%;
+  height: 60%;
   background-color: rgb(45, 145, 252);
 }
-body .container .counter, body .container .result, body .container .btn {
+body .container .counter, body .container .result {
   display: flex;
   justify-content: center;
 }
 body .container .counter {
   width: 100%;
   height: 30%;
-  font-size: 4rem;
+  font-size: 3rem;
   align-items: flex-end;
 }
 body .container .result {
@@ -23,18 +25,15 @@ body .container .result {
   height: 40%;
   font-size: 5rem;
   align-items: center;
+  color: green;
 }
 body .container .btn {
   width: 100%;
   height: 30%;
-  gap: 10%;
-  align-items: flex-start;
-}
-body .container .btn button {
-  padding: 5px;
+  text-align: center;
+  background-color: antiquewhite;
 }
 body .container .btn button:hover {
   color: blue;
   background-color: white;
-  border: 2px solid white;
 }/*# sourceMappingURL=counter.css.map */
