--- a/TP04/Ex3/counter.scss
+++ b/TP04/Ex3/counter.scss
@@ -1,14 +1,14 @@
 body{
-    // width: 50vw;
-    // height: 50vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     .container{
-        width: 50vw;
-        height: 80vh;
+        width: 50%;
+        height: 60%;
         background-color: rgb(45, 145, 252);
-        .counter, .result, .btn{
+        .counter, .result{
             display: flex;
             justify-content: center;
             // align-items: center;
@@ -16,7 +16,7 @@ body{
         .counter{
             width: 100%;
             height: 30%;
-            font-size: 4rem;
+            font-size: 3rem;
             align-items: flex-end;
         }
         .result{
@@ -24,18 +24,17 @@ body{
             height: 40%;
             font-size: 5rem;
             align-items: center;
+            color: green;
         }
         .btn{
             width: 100%;
             height: 30%;
-            gap: 10%;
-            align-items: flex-start;
+            text-align: center;
+            background-color: antiquewhite;
             button{
-                padding: 5px;
                 &:hover{
                     color: blue;
                     background-color: white;
-                    border: 2px solid white;
                 }
             }
         }
