--- a/TP04/Ex3/counter.css
+++ b/TP04/Ex3/counter.css
@@ -1,6 +1,6 @@
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 90vw;
+  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,7 +8,7 @@ body {
 body .container {
   width: 50%;
   height: 60%;
-  background-color: rgb(45, 145, 252);
+  border: 5px solid black;
 }
 body .container .counter, body .container .result {
   display: flex;
@@ -31,7 +31,6 @@ body .container .btn {
   width: 100%;
   height: 30%;
   text-align: center;
-  background-color: antiquewhite;
 }
 body .container .btn button:hover {
   color: blue;
