--- a/TP04/Ex3/counter.scss
+++ b/TP04/Ex3/counter.scss
@@ -1,13 +1,14 @@
 body{
-    width: 100vw;
-    height: 100vh;
+    width: 90vw;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
     .container{
         width: 50%;
         height: 60%;
-        background-color: rgb(45, 145, 252);
+        border: 5px solid black; 
+        // background-color: rgb(45, 145, 252);
         .counter, .result{
             display: flex;
             justify-content: center;
@@ -30,7 +31,7 @@ body{
             width: 100%;
             height: 30%;
             text-align: center;
-            background-color: antiquewhite;
+            // background-color: antiquewhite;
             button{
                 &:hover{
                     color: blue;
