--- a/TP04/Ex1/tab.scss
+++ b/TP04/Ex1/tab.scss
@@ -5,7 +5,7 @@
 }
 body{
     width: 100%;
-    height: 900px;
+    height: 100%;
     // background-color: aquamarine;
     display: flex;
     justify-content: center;
