--- a/TP04/Ex1/tab.css
+++ b/TP04/Ex1/tab.css
@@ -5,15 +5,13 @@
 }
 
 body {
-  width: 100%;
-  height: 100%;
+  margin-top: 20%;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 body .container {
   width: 50%;
-  height: 50%;
+  height: 60%;
   border: 5px solid black;
   background-color: #f1f5f8;
   display: flex;
