--- a/TP04/Ex1/tab.scss
+++ b/TP04/Ex1/tab.scss
@@ -4,15 +4,15 @@
     box-sizing: border-box;
 }
 body{
-    width: 100%;
-    height: 100%;
+    // width: 100vw;
+    // height: 100vh;
     // background-color: aquamarine;
+    margin-top: 20%;
     display: flex;
     justify-content: center;
-    align-items: center;
     .container{
         width: 50%;
-        height: 50%;
+        height: 60%;
         border: 5px solid black;
         background-color: #f1f5f8;
         display: flex;
