--- a/TP04/Ex1/tab.css
+++ b/TP04/Ex1/tab.css
@@ -5,13 +5,15 @@
 }
 
 body {
-  margin-top: 20%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 body .container {
   width: 50%;
-  height: 60%;
+  height: 70%;
   border: 5px solid black;
   background-color: #f1f5f8;
   display: flex;
