--- a/TP04/Ex2/resposiveMenu.scss
+++ b/TP04/Ex2/resposiveMenu.scss
@@ -4,30 +4,28 @@
     box-sizing: border-box;
 }
 body{
-    width: 100rem;
-    height: 100rem;
     .container{
-        width: 100%;
-        height: 100%;
+        margin: 0 auto;
+        width: 50%;
+        height: 90vh;
         background-color: aquamarine;
         .main-menu{
             width: 100%;
             height: 20%;
             // background-color: beige;
+            .header{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
             .content{
                 width: 100%;
                 height: 60%;
-                display: flex;
                 flex-direction: column;
-                text-align: center;
-                align-items: center;
-                justify-content: center;
                 hr{
                     width: 4rem;
                     height: 5px;
                     border-width: 0;
-                    margin: 0 auto;
-                    color: #e7dcc6;
                     background-color: #e7dcc6;
                 }
             }
@@ -35,13 +33,11 @@ body{
                 width: 100%;
                 height: 40%;
                 gap: 2%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 background-color: antiquewhite;
-                div{
+                button{
                     padding: 1%;
                     border: 2px solid orange;
+                    color: orange;
                 }
             }
         }
@@ -51,37 +47,35 @@ body{
             .first-menu, .second-menu, .third-menu{
                 width: 100%;
                 height: 33%;
-                background-color: gray;
                 display: flex;
+                flex-direction: column;
+                align-items: center;
                 .image{
-                    width: 50%;
-                    height: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    // text-align: center;
+                    width: 90%;
+                    height: 50%;
                     img{
-                        width: 50%;
-                        height: 80%;
-                        border: 2px solid orange;
+                        width: 100%;
+                        height: 100%;
                     }
                 }
                 .decription{
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: flex-start;
+                    width: 90%;
+                    height: 50%;
+                    h3{
+                        display: flex;
+                        justify-content: space-between;
+                        span{
+                            color: #b7ab98;
+                        }
+                    }
                 }
             }
-            
         }
     }
 }
-@media only screen and (max-width: 1000px) {
-    .show-menu{
-        .first-menu, .second-menu, .third-menu{
-            flex-direction: column;
-            // align-items: center;
-        }
+@media only screen and (min-width: 1000px){
+    .first-menu, .second-menu, .third-menu{
+        display: flex;
+        flex-direction: none;
     }
 }
