--- a/TP03/Ex2/sessionStorage.scss
+++ b/TP03/Ex2/sessionStorage.scss
@@ -32,6 +32,12 @@ body{
             width: 100%;
             height: 70%;
             ////
+            div{
+                display: flex;
+                div{
+                    width: 25%;
+                }
+            }
         }
     }
 }
