--- a/TP05/Ex4/university.css
+++ b/TP05/Ex4/university.css
@@ -4,28 +4,62 @@
   box-sizing: border-box;
 }
 
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 body .container {
   width: 80%;
-  height: 100vh;
+  height: 70%;
   background-color: antiquewhite;
+  border: 5px solid black;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+body .container::-webkit-scrollbar {
+  width: 0.3rem;
+  height: 14px;
+}
+body .container::-webkit-scrollbar-track {
+  background-color: #f4f4f4;
+}
+body .container::-webkit-scrollbar-thumb {
+  background-color: #00bbff;
+  border-radius: 50px;
 }
 body .container .header {
-  height: 30%;
+  height: 50%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
 }
-body .container .header :nth-child(3) select {
-  padding: 10px 5rem;
+body .container .header :nth-child(3) #select {
+  width: 100%;
+  height: 2rem;
   border: none;
   border-radius: 8px;
 }
 body .container .list-university {
-  height: 70%;
-  background-color: grey;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+  row-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+body .container .list-university div {
+  width: 90%;
+  height: 100%;
+  text-align: center;
+  background-color: rgb(244, 244, 244);
+  border: none;
+  border-radius: 9px;
+}
+
+.not_found {
+  display: none;
 }/*# sourceMappingURL=university.css.map */
