--- a/TP05/Ex4/university.scss
+++ b/TP05/Ex4/university.scss
@@ -4,34 +4,69 @@
     box-sizing: border-box;
 }
 body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     .container{
         width: 80%;
-        height: 100vh;
+        height: 70%;
         background-color: antiquewhite;
+        border: 5px solid black;
+        overflow-y: scroll;
+        overflow-x: hidden;  
+        &::-webkit-scrollbar {
+            width: 0.3rem;
+            height: 14px;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: #f4f4f4;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: #00bbff;
+            border-radius: 50px;
+        }
         .header{
-            height: 30%;
+            height: 50%;
             width: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 1rem;
             :nth-child(3){
-                select{
-                    padding: 10px 5rem;
+                #select{
+                    // padding: 10px 8rem;
+                    // margin-top: 5px;
+                    width: 100%;
+                    height: 2rem;
                     border: none;
                     border-radius: 8px;
                 }
             }
         }
         .list-university{
-            height: 70%;
-            background-color: grey;
+            // height: 50%;
+            // width: 100%;
+            // background-color: grey;
             display:grid;
             grid-template-columns: repeat(3,1fr);
+            place-items: center;  
+            row-gap: 10px;
+            column-gap: 10px;
+            
             div{
-                // display: grid;
+                width: 90%;
+                height: 100%;
+                // justify-self: center
+                text-align: center;
+                background-color: rgb(244, 244, 244);
+                border: none;
+                border-radius: 9px;
             }
+
         }
     }
+}
+.not_found{
+    display: none;
 }
