--- a/TP05/Ex5/bookStore.css
+++ b/TP05/Ex5/bookStore.css
@@ -4,45 +4,71 @@
   box-sizing: border-box;
 }
 
-body .container {
-  width: 100%;
+body {
+  width: 100vw;
   height: 100vh;
   display: flex;
-  gap: 10px;
-  background-color: antiquewhite;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+body .container {
+  width: 90%;
+  height: 80%;
+  display: flex;
+  border: 2px solid black;
+  background-color: rgb(235, 235, 235);
 }
 body .container .input-data {
-  height: 100%;
   width: 30%;
-  background-color: rgb(190, 190, 190);
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 body .container .input-data form {
+  width: 100%;
+  height: 100%;
   padding: 10px;
+}
+body .container .input-data form #add, body .container .input-data form #name, body .container .input-data form #category {
+  padding: 5px 20px;
+}
+body .container .input-data form #add:hover {
+  color: white;
+  background-color: blue;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 body .container .output-data {
   width: 70%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  background-color: aquamarine;
+  padding: 1rem 0.7rem;
   gap: 10px;
   overflow-y: scroll;
 }
 body .container .output-data .box {
   width: 100%;
+  height: 100%;
   background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 0;
+  padding: 0.4rem;
   gap: 10px;
+}
+body .container .output-data .box div {
+  width: 100%;
 }
 body .container .output-data .box div:first-child {
   min-height: 8rem;
-  width: 90%;
-  background-color: blueviolet;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+body .container .output-data .box div:first-child img {
+  width: 100%;
 }
 body .container .output-data .box div:nth-child(2) {
   width: 100%;
