--- a/TP05/Ex5/bookStore.scss
+++ b/TP05/Ex5/bookStore.scss
@@ -4,18 +4,42 @@
     box-sizing: border-box;
 }
 body{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
     .container{
-        width: 100%;
-        height: 100vh;
+        width: 90%;
+        height: 80%;
         display: flex;
-        gap: 10px;
-        background-color: antiquewhite;
+        border: 2px solid black;
+        // gap: 10px;
+        background-color: rgb(235, 235, 235);
         .input-data{
-            height: 100%;
             width: 30%;
-            background-color: rgb(190, 190, 190);
+            height: 100%;
+            // background-color: rgb(190, 190, 190);
+            display: flex;
+            justify-content: center;
             form{
+                width: 100%;
+                height: 100%;
                 padding: 10px;
+                // width: 90%;
+                #add, #name, #category{
+                    padding: 5px 20px;
+                }
+                #add{
+                    &:hover{
+                        color: white;
+                        background-color: blue;
+                        border: none;
+                        border-radius: 5px;
+                        cursor: pointer;
+                    }
+                }
             }
         }
         .output-data{
@@ -23,27 +47,33 @@ body{
             // height: 100%;
             display: grid;
             grid-template-columns: repeat(4,1fr);
-            background-color: aquamarine;
+            // background-color: aquamarine;
+            padding: 1rem .7rem;
             gap: 10px;
             overflow-y: scroll;
+            // overflow-x: hidden;
             .box{
                 width: 100%;
-                // height: 100%;
+                height: 100%;
                 background-color: rgb(255, 255, 255);
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 // justify-content: center;
-                padding: 1rem 0;
+                padding: 0.4rem ;
                 gap: 10px;
                 div{
+                    width: 100%;
                     &:first-child{
                         min-height: 8rem;
-                        width: 90%;
-                        background-color: blueviolet;
+                        // width: 90%;
+                        // background-color: blueviolet;
                         display: flex;
                         align-items: center;
                         justify-content: center;
+                        img{
+                            width: 100%;
+                        }
                     }
                     &:nth-child(2){
                         // height: 50%;
