--- a/TP05/Ex5/bookStore.css
+++ b/TP05/Ex5/bookStore.css
@@ -47,6 +47,7 @@ body .container .output-data {
   padding: 1rem 0.7rem;
   gap: 10px;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 body .container .output-data .box {
   width: 100%;
