--- a/TP05/Ex5/bookStore.scss
+++ b/TP05/Ex5/bookStore.scss
@@ -51,7 +51,7 @@ body{
             padding: 1rem .7rem;
             gap: 10px;
             overflow-y: scroll;
-            // overflow-x: hidden;
+            overflow-x: hidden;
             .box{
                 width: 100%;
                 height: 100%;
