--- a/TP06/Ex3/list.css
+++ b/TP06/Ex3/list.css
@@ -15,12 +15,8 @@ body .container {
   display: flex;
   background-color: antiquewhite;
 }
-body .container .pageLoad {
-  width: 10%;
-  height: 100%;
-}
 body .container .dataLoad {
-  width: 90%;
+  width: 50%;
   height: 100%;
   background-color: rgb(167, 164, 164);
   overflow-y: auto;
@@ -39,8 +35,13 @@ body .container .dataLoad .item .beer {
 }
 body .container .dataLoad .item .data {
   width: 80%;
+  text-align: center;
 }
 body .container .dataLoad .item:hover {
   color: aliceblue;
   background-color: rgb(31, 128, 255);
+}
+body .container .detail {
+  width: 50%;
+  height: 100%;
 }/*# sourceMappingURL=list.css.map */
