--- a/TP06/Ex3/list.scss
+++ b/TP06/Ex3/list.scss
@@ -12,12 +12,12 @@ body{
         margin: auto;
         display: flex;
         background-color: antiquewhite;
-        .pageLoad{
-            width: 10%;
-            height: 100%;
-        }
+        // .pageLoad{
+        //     width: 10%;
+        //     height: 100%;
+        // }
         .dataLoad{
-            width: 90%;
+            width: 50%;
             height: 100%;
             background-color: rgb(167, 164, 164);
             overflow-y: auto;
@@ -34,12 +34,17 @@ body{
                 }
                 .data{
                     width: 80%;
+                    text-align: center;
                 }
                 &:hover{
                     color: aliceblue;
                     background-color: rgb(31, 128, 255);
                 }
             }
+        }
+        .detail{
+            width: 50%;
+            height: 100%;
         }
     }
 }
